# PNPInverse

./: .gitignore  CLAUDE.md  Infer_D_from_data.py  PNP Equation Formulations.tex  PNP Equations Parameters.xlsx  README.md  REPO_LAYOUT.md  bfgs_lbfgsb_diffusion_failure_study.py  forward_solver_D_stability_study.py  optimization_method_study.py  pyproject.toml  retrain_existing_models_log.txt  retrain_new_models_log.txt  retrainlog.md
.claude/: gsd-file-manifest.json  plan.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.verification/: REPORT.md  opus-chunk-A-report.md  opus-chunk-B-report.md  opus-chunk-C-report.md  sonnet-chunk-1-muh-report.md  sonnet-chunk-1-report.md  sonnet-chunk-2-logc-bz-report.md  sonnet-chunk-2-report.md  sonnet-chunk-3-orchestrator-report.md  sonnet-chunk-3-report.md  sonnet-chunk-4-config-report.md  sonnet-chunk-4-report.md  sonnet-chunk-5-obs-diag-report.md  sonnet-chunk-5-report.md  sonnet-chunk-6-factory-report.md  sonnet-chunk-A-report.md  sonnet-chunk-B-report.md  sonnet-chunk-C-report.md  sonnet-verify-edits-report.md
FluxCurve/: __init__.py  bv_config.py  bv_curve_eval.py  bv_observables.py  bv_parallel.py  bv_point_solve.py  bv_run.py  config.py  curve_eval.py  observables.py  plot.py  point_solve.py  recovery.py  replay.py  results.py  run.py
Forward/: __init__.py  bv_solver.py  dirichlet_solver.py  noise.py  params.py  plotter.py  robin_solver.py  steady_state.py
Helpers/: Infer_D_from_data_helpers.py  Infer_RobinBC_from_data_helpers.py  (+1 more)
InferenceScripts/: bv_iv_curve.py  (+11 more)
(+3381 files in other folders)
